// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactInformationForm should match snapshot 1`] = `
<Component>
  <Form>
    <Component>
      Contact Information
    </Component>
    <Component>
      Please use the fields below to edit your contact information
      <br />
      <br />
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="company-name"
          id="companyName"
          labelText="Company Name"
          name="companyName"
          type="text"
        />
      </Component>
      <Component>
        <Component
          dataTest="name"
          id="name"
          labelText="Full Name"
          name="name"
          type="text"
        />
      </Component>
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="job-title"
          id="jobTitle"
          labelText="Job Title"
          name="jobTitle"
          type="text"
        />
      </Component>
      <Component>
        <Component
          dataTest="telephone"
          id="phone"
          labelText="Telephone"
          name="telephone"
          type="tel"
        />
      </Component>
    </Component>
    <Component>
      <Component
        dataTest="save-changes"
        disabled={true}
        loading={false}
        type="submit"
        variant="primary"
      >
        Save Changes
      </Component>
    </Component>
  </Form>
</Component>
`;

exports[`ContactInformationForm should match snapshot 2`] = `
<Component>
  <Form>
    <Component>
      Contact Information
    </Component>
    <Component>
      Please use the fields below to edit your contact information
      <br />
      <br />
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="company-name"
          id="companyName"
          labelText="Company Name"
          name="companyName"
          type="text"
        />
      </Component>
      <Component>
        <Component
          dataTest="name"
          id="name"
          labelText="Full Name"
          name="name"
          type="text"
        />
      </Component>
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="job-title"
          id="jobTitle"
          labelText="Job Title"
          name="jobTitle"
          type="text"
        />
      </Component>
      <Component>
        <Component
          dataTest="telephone"
          id="phone"
          labelText="Telephone"
          name="telephone"
          type="tel"
        />
      </Component>
    </Component>
    <Component>
      <Component
        dataTest="save-changes"
        disabled={true}
        loading={true}
        type="submit"
        variant="primary"
      >
        Save Changes
      </Component>
    </Component>
  </Form>
</Component>
`;
